--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:text="@string/translate_button"
             android:id="@+id/button"
             android:onClick="onClick"
-            android:layout_gravity="center_horizontal|bottom" />
+            android:layout_gravity="center_horizontal|bottom" />s
 
         <EditText
             android:id="@+id/userInput"
