was able to get the action item to display the list fragment over the activity but can't get the original layout to close

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:text="@string/translate_button"
             android:id="@+id/button"
             android:onClick="onClick"
-            android:layout_gravity="center_horizontal|bottom" />s
+            android:layout_gravity="center_horizontal|bottom" />
 
         <EditText
             android:id="@+id/userInput"
@@ -46,4 +46,5 @@
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
         android:background="#BBB"/>
+
 </android.support.v4.widget.DrawerLayout>
